--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Welcome to Astro.">
   <main>
-    <h1 class="font-primary text-blue-600">Primary</h1>
-    <h2 class="font-secondary">Secondary</h2>
+    <h1 class="font-primary text-primary">Primary</h1>
+    <h2 class="font-secondary text-secondary">Secondary</h2>
   </main>
 </Layout>
