--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
+import LoadingScreen from "@components/LoadingScreen.astro";
 ---
 
 <Layout title="Welcome to Astro.">
+  <LoadingScreen />
   <main>
     <h1 class="font-primary text-primary">Primary</h1>
     <h2 class="font-secondary text-secondary">Secondary</h2>
   </main>
 </Layout>
-    
