--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource/koulen";
 import "@fontsource/convergence";
+import Trailer from "@components/Trailer.astro";
 
 export interface Props {
   title: string;
@@ -28,7 +29,8 @@ const { title } = Astro.props;
     ></script>
     <title>{title}</title>
   </head>
-  <body class="relative">
+  <body class="relative bg-white">
+    <Trailer />
     <slot />
   </body>
 </html>
